<resources>
  <string name="app_name">Raze Galactic</string>
  <string name="rovers">Rovers</string>
  <string name="round_trip">Round Trip</string>
  <string name="roundTripSwitch">...</string>
  <string name="space_stations">Space Stations</string>
  <string name="flights">Flights</string>
  <string name="dca">DCA</string>
  <string name="mars">MARS</string>
  <string name="_1_traveller">1 Traveller</string>
  <string name="sept_14_17">Sept 14 - 17</string>
  <string name="track_the_staus_of_a_journey">Track the staus of a Journey</string>
  <string name="explore_the_universe">Explore the Universe</string>
  <string name="mars_colonies">Mars Colonies</string>
  <string name="washington_d_c">Washington, D.C.</string>
  <string name="one_way">One Way</string>
  <string name="dca">DCA</string>
  <string name="mars">MARS</string>
  <string name="sept_14_17">Sept 14 - 17</string>
  <string name="_1_traveller">1 Traveller</string>
  <string name="track_the_staus_of_a_journey">Track the staus of a Journey</string>
  <string name="explore_the_universe">Explore the Universe</string>
  <string name="washington_d_c">Washington, D.C.</string>
  <string name="mars_colonies">Mars Colonies</string>
</resources>
